Se arreglan unos detalles de la app

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
 
     <EditText
         android:id="@+id/campoTexto"
+        android:hint="@string/ingrese_el_numero_a_convertir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
